2005-12-16  Ralf Corsepius <ralf.corsepius@rtems.org>

	* libc/include/stdint.h: Prefer long over int for int32_t.
	Use __have_long32 to set up int32_t.
	* libc/include/inttypes.h: Use "#if xxx" instead of "#ifdef xxx"
	(Sync with stdint.h).

2005-12-14  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/sys/fcntl.h: Define O_SYNC unconditionally.  Fix
	typo in O_NDELAY comment.

2005-12-13  Nathan Sidwell  <nathan@codesourcery.com>

	* libc/include/machine/ieeefp.h (__mt__): Renamed from __ms1__.
	* libc/include/machine/setjmp.h (__mt__): Likewise.
	* libc/machine/mt/setjmp.S: Rename ms1 reference to mt.
	* libc/machine/configure.in: Ditto.

2005-12-12  Nathan Sidwell  <nathan@codesourcery.com>

	* configure.host: Replace ms1 arch with mt arch.
	* libc/machine/mt: Renamed from ms1 dir.

2005-12-08  Shaun Jackman  <sjackman@gmail.com>

	* libc/include/sys/types.h: Remove the ifdef armour around
	standard POSIX types.

2005-12-06  Ralf Corsepius <ralf.corsepius@rtems.org>

	* libc/sys/rtems/crt0.c: Add rtems_gxx_key_create,
	rtems_gxx_key_delete, rtems_gxx_getspecific,
	rtems_gxx_setspecific, rtems_gxx_mutex_trylock, 
	rtems_gxx_recursive_mutex_init, rtems_gxx_recursive_mutex_lock, 
	rtems_gxx_recursive_mutex_trylock, rtems_gxx_recursive_mutex_unlock.

2005-12-05  Christopher Faylor  <cgf@timesys.com>

	* libc/include/stdlib.h: Move cygwin declarations to cygwin-specific
	file.  Declare unsetenv and _unsetenv_r when not cygwin.

2005-11-18  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/time/strptime.c (strptime): Don't abort for %c and %Z.
	Treat %c as "%a %b %e %H:%M:%S %Y" and ignore %Z.

2005-11-18  Christopher Faylor  <cgf@timesys.com>

	* include/sys/time.h: Move more cygwin stuff to cygwin-specific header.

2005-11-18  Christopher Faylor  <cgf@timesys.com>

	* include/time.h: Remove more cygwin-specific stuff.

2005-11-18  Christopher Faylor  <cgf@timesys.com>

	* include/time.h: Move cygwin declarations to cygwin-specific header.